solved problem with wrong colors

--- a/.tmp/styles/main.css
+++ b/.tmp/styles/main.css
@@ -433,3 +433,9 @@ body {
 {
   width: 100%;
 }
+
+/* nvd3 graphs fill */
+.nv-group
+{
+  fill-opacity: 1 !important;
+}
