--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -437,3 +437,9 @@ body {
 {
   width: 100%;
 }
+
+/* nvd3 graphs fill */
+.nv-group
+{
+  fill-opacity: 1 !important;
+}
